Implemented event bubbling
To enable event bubbling, define a @parent ivar, or set the __bubble_attr__ to a
valid string or symbol. Valid symbols include :@@foo to use a cvar, :@bar to use
an ivar, or :baz to use an instance method. Remember to set event[:bubbles] =
true, or dispatch_event event, :bubbles => :true.

--- a/TODO
+++ b/TODO
@@ -1,8 +1,7 @@
 TODO
 
 Short-Term:
-- implement event bubbling
-- finish implementing actions in TextContext
+- implement event bubbling DONE
 
 Mid-Term:
 - develop Round Table modules (aka Knights?) that provide data/scenarios and
