--- a/TODO
+++ b/TODO
@@ -1,11 +1,5 @@
 TODO
 
 Short-Term:
-- develop Round Table modules (aka Knights?) that provide data/scenarios and
-  additional related functionality e.g. specialized controllers
-  - use similar structure to Rails plugins, e.g. modules/<knight>/init.rb
-
-Long-Term:
-- for exploration/overworld controller, develop ActionResponder class that can
-  respond to a set of actions, e.g. a door might respond to open, listen, and
-  break.
+- develop DelegateController that has a set of ActionPerformers it can
+  delegate actions to
